<resources>
    <string name="app_name">YORK_4_Android_App</string>
    <string name="Image1">imageNotice</string>
    <string name="Text1"><a href="#">Click to see special notices</a></string>
    <string name="Text2">Click on the button below to begin entering student details.</string>
    <string name="Text3">Enter student details</string>
    <string name="Text4">All fields are required to fill</string>
    <string name="Text5">Student ID</string>
    <string name="Text6">Student Name</string>
    <string name="Btn">ADD</string>
    <string name="Btn1">UPDATE</string>
    <string name="Btn2">VIEW</string>
    <string name="Text7">Subject</string>
    <string name="Test8">Grade</string>
    <string name="radio">Mathematics</string>
    <string name="radio1">Science</string>
    <string name="radio2">English</string>
    <string name="radio3">IT</string>
    <string name="Test9">Update student details</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="btnDelete">DELETE</string>
    <string name="Test10">View student details</string>
    <string name="Text11">ID:</string>
    <string name="Test12">"Name: "</string>
    <string name="Test13">"Grade: "</string>
    <string name="Test14">"Subject: "</string>
    <string name="TestHW">Important! Once it is uploaded. It cannot be edited.</string>
    <string name="Test15">Enter Homework Title</string>
    <string name="Test16">Select Current Date</string>
    <string name="Btn3">Select</string>
    <string name="Btn4">Upload</string>
    <string name="TestError">If you encounter any interruptions while uploading homework or have any feedback,
                            please indicate it.</string>
    <string name="Msg">Type here</string>
    <string name="Btn5">Submit</string>
    <string name="Btn17">Next</string>
    <string name="image">uploadImage</string>
    <string name="title">Upload Homework</string>
    <string name="image1">search</string>
    <string name="image2">bar</string>
    <string name="button1">ADMIN</string>
    <string name="txtH">HIC e-learning system</string>
    <string name="button2">STUDENT</string>
    <string name="btn01">TERM REGISTRATION</string>
    <string name="btn02">UPLOAD HOMEWORK</string>
    <string name="btn1">ADD TIMETABLE</string>
    <string name="btn2">UPLOAD NOTES</string>
    <string name="textyork">Presented_By_YORK_4_Android</string>
    <string name="Text17">If you have any interrupts or feedback</string>
    <string name="Text18">CLICK HERE</string>
    <string name="Btn7">VIEW</string>
    <string name="Text19">Regular Fee</string>
    <string name="Text20">Library Fee</string>
    <string name="Text21">Swimming Practice Fee</string>
    <string name="Text22">Shuttle Service Fee</string>
    <string name="Text23">Calculate Term Fee</string>
    <string name="Text24">Registration Details</string>
    <string name="Text25">Full Name:</string>
    <string name="Text26">Student ID:</string>
    <string name="Text27">Bank Slip</string>
    <string name="Text28">Add Slip</string>
    <string name="btn7">UPLOAD</string>
    <string name="btn8">Calculate</string>
    <string name="Text29">TERM REGISTRATION</string>
    <string name="US">Upload Slip</string>
    <string name="adm1">View Student Details</string>
    <string name="adm2">View Upload Details</string>
    <string name="admTitle">Title: </string>
    <string name="admImg">Image: </string>
    <string name="admtable">View Weekday Timetable </string>
    <string name="admtable1">View Weekend Timetable</string>


    <string name="Title">Enter the details</string>
    <string name="Topic">Upload Videos</string>
    <string name="title1">Upload Notices</string>
    <string name="title3">Admin</string>
    <string name="title4">Uploading</string>
</resources>