<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home1"
    tools:context=".activity_admin">

    <Button
        android:id="@+id/button2"
        android:layout_width="241dp"
        android:layout_height="110dp"
        android:background="#5935497C"
        android:shadowColor="#2893E8"
        android:text="@string/btn2"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <Button
        android:id="@+id/button"
        android:layout_width="244dp"
        android:layout_height="112dp"
        android:background="#5935497C"
        android:shadowColor="#E23980B8"
        android:text="@string/btn1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/studentDetailsShow"
        android:layout_width="179dp"
        android:layout_height="30dp"
        android:background="#2FFFFFFF"
        android:text="@string/adm1"
        android:textAlignment="center"
        android:textColor="#07E3B0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <TextView
        android:id="@+id/studentDetailsShow2"
        android:layout_width="179dp"
        android:layout_height="30dp"
        android:background="#2FFFFFFF"
        android:text="@string/adm2"
        android:textAlignment="center"
        android:textColor="#07E3B0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />


</androidx.constraintlayout.widget.ConstraintLayout>